[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/HANGTHEDJ.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/img/player/loading/atlas.png" type="Texture" id=3]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 130
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="AtlasTexture" id=2]

flags = 0
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false
_sections_unfolded = [ "Resource" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="LoadingBackground" type="ColorRect" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 1080.0
margin_bottom = 1922.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.65, 0.753906, 0.35, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Back" type="ColorRect" parent="LoadingBackground" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -387.0
margin_top = 660.0
margin_right = 387.0
margin_bottom = 821.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.269165, 0.703125, 0, 1 )

[node name="Loading" type="RichTextLabel" parent="LoadingBackground/Back" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.5
margin_top = -65.0
margin_right = 380.5
margin_bottom = 65.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "LOADING..."
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Image" type="TextureRect" parent="LoadingBackground" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 402.0
margin_right = 32.0
margin_bottom = 466.0
rect_scale = Vector2( 7, 7 )
rect_pivot_offset = Vector2( 32, 32 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 2 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Menu" parent="." index="1" instance=ExtResource( 4 )]

[node name="LoadingTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="QuitTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="LoadingTimer" to="." method="_on_LoadingTimer_timeout"]

[connection signal="timeout" from="QuitTimer" to="." method="_on_QuitTimer_timeout"]


